# tiny-iso-engine

./: .gitattributes  CMakeLists.txt  readme.md
.cache/clangd/index/: main.cpp.BFB4B35B70C660FD.idx  main.cpp.FFE10108D7F4F589.idx  main.hpp.214EBD5506FCB5B9.idx  main.hpp.BBEA8369D758D048.idx  render.cpp.2E56026155B78C46.idx  render.cpp.47B009222D26CC3A.idx  render.hpp.B2EA61338D8367E8.idx  render.hpp.EA616C6740A55CAE.idx  textfile.cpp.465720AD7131774C.idx  textfile.hpp.B5027283D8D9B7C3.idx  tools.cpp.C042D6526B4E63F8.idx  tools.cpp.C4563B273ABC4AD3.idx  tools.hpp.469B32C9BE35F881.idx  tools.hpp.DD9C8E334FEBE6F6.idx
include/: main.hpp  render.hpp  tools.hpp
include/IO/: textfile.hpp
include/Mesh/: mesh.hpp  voxel.hpp
src/: main.cpp  render.cpp  tools.cpp
src/IO/: textfile.cpp
src/Mesh/: mesh.cpp  voxel.cpp
